Complete refactor, cleaner structure